--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     repositories {
-        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
         jcenter()
     }
 
